tests/ui/fail_store_disabled_auto_functions.stderr
error[E0599]: the method `create_with_auto_functions` exists for struct `InteractionBuilder<'_, StoreDisabled>`, but its trait bounds were not satisfied
  --> tests/ui/fail_store_disabled_auto_functions.rs:19:10
   |
14 |       let _builder = client
   |  ____________________-
15 | |         .interaction()
16 | |         .with_model("gemini-3-flash-preview")
17 | |         .with_text("Hello")
18 | |         .with_store_disabled()
19 | |         .create_with_auto_functions(); // ERROR: method not found
   | |_________-^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: src/request_builder/mod.rs
   |
   |   pub struct StoreDisabled;
   |   ------------------------ doesn't satisfy `StoreDisabled: CanAutoFunction`
   |
   = note: the following trait bounds were not satisfied:
           `StoreDisabled: CanAutoFunction`
